# Autonomous-Assembly-of-Neural-Structure

./: .env  .gitignore  CITATION.CFF  Dockerfile  README.md  pyproject.toml
docs/: index.html
examples/: aif_gridworld.py  player_pool.py  rl_lunarlander.py  rl_tictactoe_sparse.py  sl_narma10.py  tictactoe_env.py  tictactoe_main.py  vizu.py
plotsdata/: performance_benchmark_20251012_121256.csv
src/comparisons/: run.py  run_comparative_analysis.sh  run_comparative_smoke_test.sh
src/comparisons/esn/: model.py  run.py  tpe_search.py  trainer.py
src/comparisons/lstm/: model.py  run.py  tpe_search.py  trainer.py
src/comparisons/rnn/: __init__.py  model.py  run.py  tpe_search.py  trainer.py
src/sbb/: __init__.py  base.py  bsr.py  const.py  hyperparameters.py  machine.py  plasticity.py  topology.py  types.py  util.py  weights.py
tests/: common.py
tests/diagnostics/: reference.md  test_decay_dynamics.py  test_eligibility.py  test_feedback.py  test_input_saturation.py  test_memory_capacity_small.py  test_neurotrophic.py  test_recurrent.py
tests/integration/: test_aif.py  test_basic_learning.py  test_benchmarks.py  test_perturbation.py  test_pruning.py  test_rl.py  test_sl.py
tests/profiling/: test_capacity.py  test_config_laws.py  test_perf_signature_submax.py  test_performance.py  test_profile.py  test_regress_crash_project_norm.py  test_regress_illegal_access_largeN_capped_slots.py  test_regress_perf_large_topology.py
tests/unit/: test_aif.py  test_bsr.py  test_rl.py  test_sequence_kernel.py  test_sl.py  test_topology.py  test_weights.py
(+24 files in other folders)
